--- a/template/SVM_School.html
+++ b/template/SVM_School.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/style.css">
     
     <!-- ReCaptcha -->
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=en&onload=onloadCallback&render=explicit" async defer></script>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="/style1.css">
   <style>
     /* Enhanced CSS with professional touches */
     :root {
@@ -256,13 +256,13 @@
     <div class="container">
       <div class="nav-content">
         <div class="logo">
-          <img src="assets/images/logo.jpg" alt="SVM Logo">
+          <img src="/assets/images/logo.jpg" alt="SVM Logo">
           <span>SVM Institute of Technology</span>
         </div>
         
         <div class="nav-links">
-          <a href="index.html" class="nav-link">Home</a>
-          <a href="About.html" class="nav-link">About</a>
+          <a href="/index.html" class="nav-link">Home</a>
+          <a href="/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
             <div class="dropdown-content">
@@ -285,16 +285,15 @@
           <div class="dropdown">
             <a href="#" class="nav-link">College</a>
             <div class="dropdown-content">
-              <a href="JP College of Arts.html" class="dropdown-item active">JP College of Arts</a>
-              <a href="JP College of Science.html" class="dropdown-item">JP College of Science</a>
-              <a href="SVMIT College.html" class="dropdown-item">SVMIT College</a>
-              <a href="MK collage of commerce.html" class="dropdown-item">MK Collage of Commerce</a>
-              <a href="#" class="dropdown-item">MK College of commerce</a>
-              <a href="#" class="dropdown-item">MK College of Arts</a>
+              <a href="/template/JP College of Arts.html" class="dropdown-item active">JP College of Arts</a>
+              <a href="/template/JP College of Science.html" class="dropdown-item">JP College of Science</a>
+              <a href="/template/SVMIT College.html" class="dropdown-item">SVMIT College</a>
+              <a href="/template/MK collage of commerce.html" class="dropdown-item">MK Collage of Commerce</a>
+              <a href="/template/MK collage of Arts.html" class="dropdown-item">MK Collage of Arts</a>
               <div class="submenu">
                 <a href="#">School</a>
                 <div class="submenu-content">
-                    <a href="SVM_School.html">SVM School</a>
+                    <a href="/template/SVM_School.html">SVM School</a>
                 </div>
               </div>
             </div>
@@ -548,7 +547,7 @@
               </div>
             </div>
           </footer>
-          <script src="script1.js"></script>
+          <script src="/script1.js"></script>
         </body>
         </html>
     </main>
