--- a/template/mk_commerce.html
+++ b/template/mk_commerce.html
@@ -266,19 +266,16 @@
             </div>
           </div>
           <a href="#" class="nav-link">Admissions</a>
-          <div class="dropdown">
-            <a href="#" class="nav-link">College</a>
-            <div class="dropdown-content">
-              <a href="/template/JP College of Arts.html" class="dropdown-item">JP College of Arts</a>
-              <a href="/template/JP College of Science.html" class="dropdown-item">JP College of Science</a>
-              <a href="/template/SVMIT College.html" class="dropdown-item">SVMIT College</a>
-              <a href="/template/MK collage of Commerce.html" class="dropdown-item active">MK College of Commerce</a>
-              <a href="/template/MK collage of Arts.html" class="dropdown-item active">MK College of Arts</a>
-              <div class="submenu">
-                <a href="#">School</a>
-                <div class="submenu-content">
-                    <a href="/template/SVM_School.html">SVM School</a>
-                </div>
+          <div class="dropdown-content">
+            <a href="/template/jp_arts.html" class="dropdown-item active">JP College of Arts</a>
+            <a href="/template/jp_science.html" class="dropdown-item">JP College of Science</a>
+            <a href="/template/svmit.html" class="dropdown-item">SVMIT College</a>
+            <a href="/template/mk_commerce.html" class="dropdown-item">MK Collage of Commerce</a>
+            <a href="/template/mk_arts.html" class="dropdown-item">MK Collage of Arts</a>
+            <div class="submenu">
+              <a href="#">School</a>
+              <div class="submenu-content">
+                  <a href="/template/svm_school.html">SVM School</a>
               </div>
             </div>
           </div>
