manage principal and add event button

--- a/template/login.html
+++ b/template/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <!-- Same navbar as index.html -->
+    <!-- Same navbar as index.php -->
     <div class="container">
       <div class="nav-content">
         <div class="logo">
@@ -16,7 +16,7 @@
           <span>SVM Institute of Technology</span>
         </div>
         <div class="nav-links">
-          <a href="../index.html" class="nav-link">Home</a>
+          <a href="../index.php" class="nav-link">Home</a>
           <a href="login.html" class="nav-link">Login</a>
         </div>
       </div>
