--- a/template/mk_arts.html
+++ b/template/mk_arts.html
@@ -408,7 +408,7 @@
         </div>
         
         <div class="nav-links">
-          <a href="/index.html" class="nav-link">Home</a>
+          <a href="/index.php" class="nav-link">Home</a>
           <a href="/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
@@ -429,19 +429,21 @@
             </div>
           </div>
           <a href="#" class="nav-link">Admissions</a>
-          <div class="dropdown-content">
-            <a href="/template/jp_arts.html" class="dropdown-item active">JP College of Arts</a>
-            <a href="/template/jp_science.html" class="dropdown-item">JP College of Science</a>
-            <a href="/template/svmit.html" class="dropdown-item">SVMIT College</a>
-            <a href="/template/mk_commerce.html" class="dropdown-item">MK Collage of Commerce</a>
-            <a href="/template/mk_arts.html" class="dropdown-item">MK Collage of Arts</a>
-            <div class="submenu">
-              <a href="#">School</a>
-              <div class="submenu-content">
-                  <a href="/template/svm_school.html">SVM School</a>
-              </div>
+          <div class="dropdown">
+            <a class="nav-link">College</a>
+            <div class="dropdown-content">
+              <a href="/SVM/template/jp_arts.html" class="dropdown-item">JP College of Arts</a>
+              <a href="/SVM/template/jp_science.html" class="dropdown-item">JP College of Science</a>
+              <a href="/SVM/template/svmit.html" class="dropdown-item">SVMIT College</a>
+              <a href="/SVM/template/mk_commerce.html" class="dropdown-item">MK College of Commerce</a>
+              <a href="/SVM/template/mk_arts.html" class="dropdown-item">MK College of Arts</a>
+              <div class="submenu">
+                <a >School</a>
+                <div class="submenu-content">
+                    <a href="/SVM/template/svm_school.html">SVM School</a>
+                </div>
             </div>
-          </div>
+            </div>
         </div>
       </div>
     </div>
