--- a/template/svm_school.html
+++ b/template/svm_school.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     
     <!-- ReCaptcha -->
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=en&onload=onloadCallback&render=explicit" async defer></script>
-    <link rel="stylesheet" href="/style1.css">
+    <link rel="stylesheet" href="../style1.css">
   <style>
     /* Enhanced CSS with professional touches */
     :root {
@@ -256,13 +256,13 @@
     <div class="container">
       <div class="nav-content">
         <div class="logo">
-          <img src="/assets/images/logo.jpg" alt="SVM Logo">
+          <img src="/SVM/assets/images/logo.jpg" alt="SVM Logo">
           <span>SVM Institute of Technology</span>
         </div>
         
         <div class="nav-links">
-          <a href="/index.php" class="nav-link">Home</a>
-          <a href="/template/About.html" class="nav-link">About</a>
+          <a href="/SVM/index.html" class="nav-link">Home</a>
+          <a href="/SVM/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
             <div class="dropdown-content">
@@ -546,7 +546,7 @@
               </div>
             </div>
           </footer>
-          <script src="/script1.js"></script>
+          <script src="../script1.js"></script>
         </body>
         </html>
     </main>
