--- a/template/mk_arts.html
+++ b/template/mk_arts.html
@@ -6,7 +6,7 @@
   <title>MK College of Arts - SVM Institute of Technology</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  <link rel="stylesheet" href="/style1.css">
+  <link rel="stylesheet" href="../style1.css">
   <style>
     :root {
       --primary-color: #4a2c82;
@@ -403,13 +403,13 @@
     <div class="container">
       <div class="nav-content">
         <div class="logo">
-          <img src="/assets/images/logo.jpg" alt="SVM Logo">
+          <img src="/SVM/assets/images/logo.jpg" alt="SVM Logo">
           <span>SVM Institute of Technology</span>
         </div>
         
         <div class="nav-links">
-          <a href="/index.php" class="nav-link">Home</a>
-          <a href="/template/About.html" class="nav-link">About</a>
+          <a href="/SVM/index.html" class="nav-link">Home</a>
+          <a href="/SVM/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
             <div class="dropdown-content">
@@ -639,7 +639,7 @@
     </div>
   </footer>
   
-  <script src="/script1.js"></script>
+  <script src="../script1.js"></script>
   <script>
     // Enhanced slider with arts-specific content
     const slides = [
