--- a/template/mk_commerce.html
+++ b/template/mk_commerce.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MK College of Commerce - SVM Institute of Technology</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="/style1.css">
+  <link rel="stylesheet" href="../style1.css">
   <style>
     /* Enhanced CSS with professional touches */
     :root {
@@ -240,13 +240,13 @@
     <div class="container">
       <div class="nav-content">
         <div class="logo">
-          <img src="/assets/images/logo.jpg" alt="SVM Logo">
+          <img src="/SVM/assets/images/logo.jpg" alt="SVM Logo">
           <span>SVM Institute of Technology</span>
         </div>
         
         <div class="nav-links">
-          <a href="/index.php" class="nav-link">Home</a>
-          <a href="/template/About.html" class="nav-link">About</a>
+          <a href="/SVM/index.html" class="nav-link">Home</a>
+          <a href="/SVM/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
             <div class="dropdown-content">
@@ -429,6 +429,6 @@
       </div>
     </div>
   </footer>
-  <script src="/script1.js"></script>
+  <script src="../script1.js"></script>
 </body>
 </html>
