adding clickable events

--- a/template/svmit.html
+++ b/template/svmit.html
@@ -209,7 +209,7 @@
         </div>
         
         <div class="nav-links">
-          <a href="/SVM/index.html" class="nav-link">Home</a>
+          <a href="/SVM/index.php" class="nav-link">Home</a>
           <a href="/SVM/template/About.html" class="nav-link">About</a>
           <div class="dropdown">
             <a href="#" class="nav-link">Academics</a>
